# Making-Query

./: .python-version  pyproject.toml  readme.md
app/: db.sqlite3
app/Blog/: models.py
app/Blog/migrations/: 0001_initial.py  0002_auto_20200415_0815.py  0003_auto_20200415_0824.py  0004_item.py
app/config/: settings.py
app/jupyternotebook/: Untitled.ipynb
app/studyquery/: apps.py
app/studyquery/migrations/: 0001_initial.py
