[tool.poetry]
name = "making-query"
version = "0.1.0"
description = ""
authors = ["parkhongbeen <pack122@naver.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
django-extensions = "^2.2.9"
notebook = "^6.0.3"
ipython = "^7.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
